--- a/ui/src/app/dialogs/groundStation/ground-station-create/ground-station-create.component.html
+++ b/ui/src/app/dialogs/groundStation/ground-station-create/ground-station-create.component.html
@@ -1,1 +1,10 @@
-<p>ground-station-create works!</p>
+<div class="grid p-fluid">
+  <div class="col-12">
+    <form [formGroup]="formGroup">
+      <input pInput formControlName="name" placeholder="name"/>
+      <input pInput formControlName="description" placeholder="description"/>
+    </form>
+  </div>
+  <button pButton label="Create" (click)="create()"></button>
+
+</div>
